# aoc-2025

./: Cargo.toml  README.md  justfile
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  fast_cli.rs  main.rs
aoc-plumbing/: Cargo.toml
day-001-secret-entrance/: Cargo.toml  README.md
day-001-secret-entrance/src/: lib.rs
day-002-gift-shop/: Cargo.toml  README.md
day-002-gift-shop/src/: lib.rs
day-003-lobby/: Cargo.toml
day-003-lobby/src/: lib.rs
day-004-printing-department/: Cargo.toml  README.md
day-004-printing-department/src/: lib.rs
day-005-cafeteria/: Cargo.toml  README.md
day-005-cafeteria/src/: lib.rs
day-006-trash-compactor/: Cargo.toml  README.md
day-006-trash-compactor/src/: lib.rs
day-007-laboratories/: Cargo.toml  README.md
day-007-laboratories/src/: lib.rs
day-008-playground/: Cargo.toml
day-008-playground/src/: lib.rs
day-010-factory/: Cargo.toml
day-010-factory/src/: lib.rs
day-011-reactor/: Cargo.toml
day-011-reactor/src/: lib.rs
scripts/: new.sh
template/: Cargo.toml
template/src/: lib.rs
