[package]
name = "aoc-benchmarking"
version = "0.1.0"
edition = "2024"
description = "Wrapper for having benchmarks in a single place."

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
secret-entrance = { path = "../day-001-secret-entrance" }
gift-shop = { path = "../day-002-gift-shop" }
lobby = { path = "../day-003-lobby" }
printing-department = { path = "../day-004-printing-department" }
cafeteria = { path = "../day-005-cafeteria" }
trash-compactor = { path = "../day-006-trash-compactor" }
laboratories = { path = "../day-007-laboratories" }
playground = { path = "../day-008-playground" }
