[package]
name = "aoc-plumbing"
version = "0.1.0"
authors = ["Jack Huang <jackhxs@gmail.com>"]
edition = "2024"
description = "Plumbing for Advent of Code (problem traits and such)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
